--- a/src/pages/bookdetailspage/BookDetails.module.css
+++ b/src/pages/bookdetailspage/BookDetails.module.css
@@ -7,6 +7,7 @@
     border: 1px solid #ddd;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    background-color: #f4eddf;
 }
 
 .title {
@@ -25,3 +26,12 @@
 .detail strong {
     font-weight: bold;
 }
+
+.alert {
+    padding: 15px !important;
+    margin: 10px 0 !important;
+    border: 1px solid transparent !important;
+    border-radius: 4px !important;
+}
+.alert-success { background-color: #d4edda !important; }
+.alert-error { background-color: #f8d7da !important; }
