--- a/src/pages/fivebookspage/FiveBooksPage.module.css
+++ b/src/pages/fivebookspage/FiveBooksPage.module.css
@@ -1,6 +1,7 @@
 .five-books {
-    display: flex;
+    display: ruby-text;
     flex-direction: column;
+    flex-basis: auto;
     align-items: center;
     padding: 20px;
     max-height: 100vh;
