code meer geordend en gestyled, context uitgebreid, cors heroku toegevoegd, QuizResultsPage is de nieuwe pagina voor beide questionnaires

--- a/src/pages/homepage/HomePage.module.css
+++ b/src/pages/homepage/HomePage.module.css
@@ -14,5 +14,9 @@
     justify-content: center;
     margin-top: 30px;
     gap: 150px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
+    background-color: lightgrey;
 }
 
