--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -34,11 +34,9 @@
     display: flex;
     flex-direction: column;
     max-width: 400px;
-    margin: 2rem auto;
-    padding: 2rem;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #deb887;
+    margin: 10px;
+    padding: 6px;
+    border-radius: 10px;
 }
 
 .form-body {
