--- a/src/components/Register/Register.module.css
+++ b/src/components/Register/Register.module.css
@@ -49,7 +49,11 @@
 /* Add padding to containers */
 .container {
     padding: 16px;
-    background-color: white;
+    background-color: #d2b48c;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
+    border-radius: 10px;
 }
 
 /* Full-width input fields */
