--- a/src/pages/homepage/HomePage.module.css
+++ b/src/pages/homepage/HomePage.module.css
@@ -9,14 +9,15 @@
 
 .centered-content {
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top: 30px;
-    gap: 150px;
     border-width: 1px;
     border-style: solid;
     border-color: black;
-    background-color: lightgrey;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    background-color: #deb887;
+    border-radius: 8px;
 }
 
