--- a/src/components/shared/searchbar/SearchBar.module.css
+++ b/src/components/shared/searchbar/SearchBar.module.css
@@ -8,12 +8,16 @@
 
 .searchbar-input {
     width: 500px;
-    height: 40px;
+    height: 50px;
     font-size: 16px;
     background-color: white;
     border-width: 1px;
     border-style: solid;
     border-color: black;
+}
+
+input {
+    background-color: white;
 }
 
 .searchbar Button {
