--- a/src/App.module.css
+++ b/src/App.module.css
@@ -42,4 +42,25 @@
     border-color: black;
 }
 
+a {
+    color: #1222d2;
+}
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    background: white;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
+    border-radius: 10px;
+}
+
+input[type=text]:focus, input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
+}
+
 /* app.css run start is voor lokale stylingregels */
