--- a/src/components/Register/Register.module.css
+++ b/src/components/Register/Register.module.css
@@ -44,7 +44,7 @@
 }
 
 .form-style {
-    margin: 300px;
+    margin: 100px 300px 300px;
 }
 /* Add padding to containers */
 .container {
@@ -57,19 +57,22 @@
 }
 
 /* Full-width input fields */
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #f1f1f1;
-}
+/*input[type=text], input[type=password] {*/
+/*    width: 100%;*/
+/*    padding: 15px;*/
+/*    margin: 5px 0 22px 0;*/
+/*    display: inline-block;*/
+/*    background: white;*/
+/*    border-width: 1px;*/
+/*    border-style: solid;*/
+/*    border-color: black;*/
+/*    border-radius: 10px;*/
+/*}*/
 
-input[type=text]:focus, input[type=password]:focus {
-    background-color: #ddd;
-    outline: none;
-}
+/*input[type=text]:focus, input[type=password]:focus {*/
+/*    background-color: #ddd;*/
+/*    outline: none;*/
+/*}*/
 
 * {
     box-sizing: border-box;
@@ -98,9 +101,9 @@ hr {
 }
 
 /* Add a blue text color to links */
-a {
-    color: dodgerblue;
-}
+/*a {*/
+/*    color: #1222d2;*/
+/*}*/
 
 /* Set a grey background color and center the text of the "sign in" section */
 .signin {
