--- a/src/components/ResultsList/ResultsList.module.css
+++ b/src/components/ResultsList/ResultsList.module.css
@@ -3,8 +3,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
     background-color: #f4eddf;
+    height: fit-content;
+    flex-wrap: nowrap;
+    flex-flow: column wrap;
+    align-content: center;
+    flex-flow: column;
 }
 
 .error-message {
