--- a/src/components/shared/ResultItem/ResultItem.module.css
+++ b/src/components/shared/ResultItem/ResultItem.module.css
@@ -5,4 +5,8 @@
     margin-top: 30px;
     gap: 50px;
     background-color: #deb887;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
+    border-radius: 10px;
 }
