--- a/src/pages/userpage/UserPage.module.css
+++ b/src/pages/userpage/UserPage.module.css
@@ -1,10 +1,16 @@
-.userpage {
+.user-page {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
+    height: 60vh;
     background-color: #f4eddf;
+    /*border-width: 1px;*/
+    /*border-style: solid;*/
+    /*border-color: black;*/
+    /*border-radius: 10px;*/
+    align-content: space-between;
+    flex-wrap: nowrap;
+    justify-content: space-around;
 }
 
 .personality-tests {
@@ -19,4 +25,5 @@
     border-width: 1px;
     border-style: solid;
     border-color: black;
+    border-radius: 10px;
 }
