extra styling toegepast en cors button aangepast

--- a/src/pages/homepage/HomePage.module.css
+++ b/src/pages/homepage/HomePage.module.css
@@ -19,5 +19,13 @@
     align-content: center;
     background-color: #deb887;
     border-radius: 8px;
+    margin: 1px;
 }
 
+.reg-button {
+    margin-bottom: 8px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
