--- a/src/components/shared/button/Button.module.css
+++ b/src/components/shared/button/Button.module.css
@@ -1,7 +1,7 @@
 .button{
     font-size: 15px;
     color: black;
-    background-color: gold;
+    background-color: #ccc;
     border-width: 2px;
     border-radius: 10px;
 }
