--- a/src/pages/bookdetailspage/BookDetailsPage.module.css
+++ b/src/pages/bookdetailspage/BookDetailsPage.module.css
@@ -28,10 +28,10 @@
 }
 
 .alert {
-    padding: 15px !important;
-    margin: 10px 0 !important;
-    border: 1px solid transparent !important;
-    border-radius: 4px !important;
+    padding: 15px;
+    margin: 10px 0;
+    border: 1px solid black;
+    border-radius: 10px;
 }
-.alert-success { background-color: #d4edda !important; }
-.alert-error { background-color: #f8d7da !important; }
+.alert-success { background-color: #589f69; }
+.alert-error { background-color: #622127; }
