--- a/src/pages/listpage/ListPage.module.css
+++ b/src/pages/listpage/ListPage.module.css
@@ -17,6 +17,10 @@
     margin-top: 30px;
     gap: 60px;
     background-color: #deb887;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
+    border-radius: 10px
 }
 
 .list-section {
