--- a/src/components/register/Register.module.css
+++ b/src/components/register/Register.module.css
@@ -1,22 +1,3 @@
-/*.register-form {*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*    height: 100vh;*/
-/*    background-color: #f4eddf;*/
-/*}*/
-
-/*.form-body {*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*    background-color: #deb887;*/
-/*    height: 200px;*/
-/*    width: 300px;*/
-/*}*/
-
 .error-message-container {
     margin-top: 10px;
     padding: 10px;
@@ -45,8 +26,9 @@
 
 .form-style {
     margin: 100px 300px 300px;
+    height: 750px;
 }
-/* Add padding to containers */
+
 .container {
     padding: 16px;
     background-color: #d2b48c;
@@ -56,35 +38,15 @@
     border-radius: 10px;
 }
 
-/* Full-width input fields */
-/*input[type=text], input[type=password] {*/
-/*    width: 100%;*/
-/*    padding: 15px;*/
-/*    margin: 5px 0 22px 0;*/
-/*    display: inline-block;*/
-/*    background: white;*/
-/*    border-width: 1px;*/
-/*    border-style: solid;*/
-/*    border-color: black;*/
-/*    border-radius: 10px;*/
-/*}*/
-
-/*input[type=text]:focus, input[type=password]:focus {*/
-/*    background-color: #ddd;*/
-/*    outline: none;*/
-/*}*/
-
 * {
     box-sizing: border-box;
 }
 
-/* Overwrite default styles of hr */
 hr {
     border: 1px solid #f1f1f1;
     margin-bottom: 25px;
 }
 
-/* Set a style for the submit button */
 .registerbtn {
     background-color: #04AA6D;
     color: white;
@@ -100,13 +62,8 @@ hr {
     opacity: 1;
 }
 
-/* Add a blue text color to links */
-/*a {*/
-/*    color: #1222d2;*/
-/*}*/
-
-/* Set a grey background color and center the text of the "sign in" section */
 .signin {
     background-color: #f1f1f1;
     text-align: center;
 }
+
